[package]
name = "travel-map"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"  # фреймворк для HTTP-серверов
tokio = { version = "1", features = ["full"] }  # асинхронное выполнение
serde = { version = "1", features = ["derive"] }  # сериализация данных
serde_json = "1"  # работа с JSON
geojson = "0.24"       # Работа с геоданными
actix-web = "4"
env_logger = "0.11.6"          # Веб-фреймворк для сервера